--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		<img src="images/sun/sun-ring-1.png" class="sun rotate-slow-left">
 		<img src="images/sun/sun-ring-2.png" class="sun rotate-slow-right">
 	</div>
+
+  <div class="earth">
+    <img src="images/earth/earth-and-moon.png" class="earth">
+  </div>
   <script src="js/scripts.js"></script>
 </body>
 
